--- a/join-now-rasakan-serunya-main-bareng.html
+++ b/join-now-rasakan-serunya-main-bareng.html
@@ -13,15 +13,15 @@
     <meta property="og:title" content="OPEN MABAR MOBILLEGENDS! JOIN NOW & RASAKAN SERUNYA MAIN BARENG!">
     <meta property="og:description" content="SIAP UNTUK BERPETUALANG SERU DI MOBILLEGEN? AYO, GABUNG DI OPEN MABAR DAN TUNJUKKAN KEHEBATANMU! MAIN BARENG TEMAN-TEMAN, SERU-SERUAN TANPA BATAS!">
     <meta property="og:url" content="https://www.lita.gg/ph/user/26414717">
-    <meta property="og:site_name" content="totoslot">
-    <meta property="og:author" content="totoslot">
+    <meta property="og:site_name" content="lita">
+    <meta property="og:author" content="lita">
     <meta property="og:image" content="https://kabar-Adisput.github.io/vip/mlbb.webp">
     <meta name="og:locale" content="ID_id">
     <meta name="og:type" content="website">
     <meta name="rating" content="general">
-    <meta name="author" content="totoslot">
+    <meta name="author" content="lita">
     <meta name="distribution" content="global">
-    <meta name="publisher" content="totoslot">
+    <meta name="publisher" content="lita">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
