--- a/open-mabar-mobillegen-join-now-rasakan-serunya-main-bareng.html
+++ b/open-mabar-mobillegen-join-now-rasakan-serunya-main-bareng.html
@@ -18,6 +18,7 @@
     <meta name="og:description" content="SIAP UNTUK BERPETUALANG SERU DI MOBILLEGEN? AYO, GABUNG DI OPEN MABAR DAN TUNJUKKAN KEHEBATANMU! MAIN BARENG TEMAN-TEMAN, SERU-SERUAN TANPA BATAS!" />
     <meta name="keywords" content="mobilelegen, mobillegen, lita, open mabar, mabar bareng, " />
     <meta name="og:image" content="https://kabar-Adisput.github.io/vip/adisput-image.jpg" />
+    <link rel="amphtml" href="https://kabar-Adisput.github.io/vip/join-now-rasakan-serunya-main-bareng.html" />
     <link rel="icon" type="image/x-icon" href="https://kabar-Adisput.github.io/vip/favicon-adisti-mobillegen.png" />
     <link rel="manifest" href="https://g.lazcdn.com/g/lzdfe/pwa-assets/5.0.7/manifest/id.json" />
     <link rel="canonical" href="https://kabar-Adisput.github.io/vip/open-mabar-mobillegen-join-now-rasakan-serunya-main-bareng.html" />
@@ -1279,7 +1280,7 @@
                     <div id="module_product_price_1" class="pdp-block module">
                       <div class="pdp-mod-product-price">
                         <div class="pdp-product-price" bis_skin_checked="1">
-                          <span class="notranslate pdp-price pdp-price_type_normal pdp-price_color_orange pdp-price_size_xl" data-spm-anchor-id="12anj4u.pdp_revamp.0.i0.241073bdUG5ius">Rp. 100 KOIN</span>
+                          <span class="notranslate pdp-price pdp-price_type_normal pdp-price_color_orange pdp-price_size_xl" data-spm-anchor-id="12anj4u.pdp_revamp.0.i0.241073bdUG5ius">Rp. 10.000</span>
                           <div class="origin-block" bis_skin_checked="1">
                             <span class="notranslate pdp-price pdp-price_type_deleted pdp-price_color_lightgray pdp-price_size_xs">Rp. 100.000</span>
                             <span class="pdp-product-price__discount">-90%</span>
