--- a/mlbb-open-mabar-bareng-player-jago-di-aplikasi-lita.html
+++ b/mlbb-open-mabar-bareng-player-jago-di-aplikasi-lita.html
@@ -12,7 +12,7 @@
       margin: 0;
       padding: 20px;
       text-align: center;
-      background: url('https://kabar-Adisput.github.io/vip/odetimage.jpg') no-repeat center center fixed;
+      background: url('https://kabar-Adisput.github.io/vip/odet2.jpg') no-repeat center center fixed;
       background-size: cover;
       animation: fadeInBody 1.5s ease-in;
     }
