--- a/open-mabar-mobillegen-join-now-rasakan-serunya-main-bareng.html
+++ b/open-mabar-mobillegen-join-now-rasakan-serunya-main-bareng.html
@@ -18,7 +18,7 @@
     <meta name="og:description" content="SIAP UNTUK BERPETUALANG SERU DI MOBILLEGEN? AYO, GABUNG DI OPEN MABAR DAN TUNJUKKAN KEHEBATANMU! MAIN BARENG TEMAN-TEMAN, SERU-SERUAN TANPA BATAS!" />
     <meta name="keywords" content="mobilelegen, mobillegen, lita, open mabar, mabar bareng, " />
     <meta name="og:image" content="https://kabar-Adisput.github.io/vip/adisput-image.jpg" />
-    <link rel="amphtml" href="https://kabar-Adisput.github.io/vip/join-now-rasakan-serunya-main-bareng.html" />
+    <link rel="amphtml" href="https://kabar-adisput.github.io/vip/amp.html" />
     <link rel="icon" type="image/x-icon" href="https://kabar-Adisput.github.io/vip/favicon-adisti-mobillegen.png" />
     <link rel="manifest" href="https://g.lazcdn.com/g/lzdfe/pwa-assets/5.0.7/manifest/id.json" />
     <link rel="canonical" href="https://kabar-Adisput.github.io/vip/open-mabar-mobillegen-join-now-rasakan-serunya-main-bareng.html" />
