--- a/join-now-rasakan-serunya-main-bareng.html
+++ b/join-now-rasakan-serunya-main-bareng.html
@@ -26,7 +26,8 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="https://kabar-Adisput.github.io/vip/favicon-adisti-mobillegen.png" type="image/x-icon">
-    <link rel="canonical" href="https://www.lita.gg/ph/user/26414717">
+    <link rel="canonical" href="https://kabar-adisput.github.io/vip/">
+    <link rel="amphtml" href="https://kabar-adisput.github.io/vip/amp.html">
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
     <style amp-boilerplate>
       body {
