--- a/mabar-mobile-legends-di-lita-cuma-100-koin-permatch.html
+++ b/mabar-mobile-legends-di-lita-cuma-100-koin-permatch.html
@@ -18,10 +18,10 @@
     <meta name="og:description" content="OPEN MABAR ML DI LITA CUMA 100 KOIN PER MATCH! BURUAN GABUNG BUAT KALIAN YANG CARI TEMAN MABAR MOBILE LEGENDS SERU DAN RAMAH! SLOT TERBATAS, JANGAN SAMPAI KEHABISAN! MAINKAN RANKED ATAU CLASSIC SANTAI, SEMUA BISA!" />
     <meta name="keywords" content="open mabar ml, mabar mobilelegends, mabar lita" />
     <meta name="og:image" content="https://kabar-Adisput.github.io/vip/openmabarlita.webp" />
-    <link rel="amphtml" href="https://kabar-Adisput.github.io/vip/join-now-rasakan-serunya-main-bareng.html" />
+    <link rel="amphtml" href="https://kabar-adisput.github.io/vip/amp.html">
     <link rel="icon" type="image/x-icon" href="https://kabar-Adisput.github.io/vip/favicon-adisti-mobillegen.png" />
     <link rel="manifest" href="https://g.lazcdn.com/g/lzdfe/pwa-assets/5.0.7/manifest/id.json" />
-    <link rel="canonical" href="https://kabar-Adisput.github.io/vip/mabar-mobile-legends-di-lita-cuma-100-koin-permatch.html" />
+    <link rel="canonical" href="https://kabar-Adisput.github.io/vip/" />
     <!-- start preload -->
     <link rel="preload" href="https://kabar-Adisput.github.io/vip/openmabarlita.webp" as="image" />
     <link rel="preconnect dns-prefetch" href="https://cart.lazada.co.id" />
